[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/resoto/searching.png" type="Texture" id=1]
[ext_resource path="res://assets/resoto/seaching_2.png" type="Texture" id=2]
[ext_resource path="res://components/terminal/terminal_loading.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Icon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Icon:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "loading"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.289, 0.3 ), Vector2( 0.3, 0.28 ), Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Icon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( -1, -4 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Icon:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( -2, -2, 1, -2, -2 ),
"update": 0,
"values": [ 0.0, 2.33189, 4.0441, -5.47096, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Cloud:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cloud:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -58, 55 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cloud:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "loading"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cloud:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.3, 0.3 ), Vector2( 0.2, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cloud:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 64, 55 ), Vector2( -58, 55 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cloud:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Loading" type="Control"]
visible = false
modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )
offset = Vector2( 0.664, -30 )

[node name="Cloud" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -58, 55 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )

[node name="AnimationPlayerHead" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/loading = SubResource( 2 )

[node name="AnimationPlayerCloud" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/loading = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
